<resources>
    <string name="app_name">Railway Watcher</string>
    <string name="about">关于</string>
    <string name="railway_title">%1$s - %2$s</string>
    <string name="railway_description">%1$d个子路段</string>
    <string name="none">无</string>
    <string name="unit_kilometer">km</string>
    <string name="unit_meter">m</string>
    <string name="single">单</string>
    <string name="doubled">双</string>
    <string name="both">全部</string>
    <string name="upstream">上行</string>
    <string name="downstream">下行</string>
    <string name="stream">上下行</string>
    <string name="name">名称</string>
    <string name="start_place">起始站</string>
    <string name="end_place">终点站</string>
    <string name="start_pos">起始</string>
    <string name="end_pos">终点</string>
    <string name="sub_ranges">子路段</string>
    <string name="add_new_subrange">添加子路段</string>
    <string name="check">check</string>
    <string name="home_title">路段</string>
    <string name="new_railway_title">新路段</string>
    <string name="position">位置</string>
    <string name="check_period">检查周期</string>
    <string name="set_check_date">设置检查日期</string>
    <string name="dont_set_check_date">不设置检查日期</string>
    <string name="dont_set_check_date_explain">如选择不设置检查日期，则会清除这一段的工作记录</string>
    <string name="date">日期</string>
    <string name="day">天</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="item">Item</string>
    <string name="reminder">提醒</string>
    <string name="position_format">%1$d km %2$03d m</string>
    <string name="day_format">%1$d天</string>
    <string name="date_format">yyyy年MM月dd日</string>
    <string name="remind_count_format">%1$d个路段需要提醒</string>
    <string name="last_checked_at_format">检查于%1$d月%2$d日</string>
    <string name="never_checked">从未检查过</string>
    <string name="past_days_format">已超时%1$d天</string>
    <string name="remaining_days_format">还有%1$d天</string>
    <string name="start_pos_bigger_than_end_pos">起点应小于终点</string>
    <string name="record_not_inside_range">起始到终点应都在同一段中</string>
    <string name="range_format">%dkm%dm - %dkm%dm</string>
</resources>